--- a/de/index.html
+++ b/de/index.html
@@ -69,45 +69,45 @@
       <table>
         <tr>
           <td>p1 (x,y,z) [m]</td>
-          <td><input type=number id="sphere-p1" step=0.001></td>
-          <td><input type=number id="sphere-p1" step=0.001></td>
-          <td><input type=number id="sphere-p1" step=0.001></td>
+          <td><input type=number id="sphere-p1-x" step=0.001 value=0.0></td>
+          <td><input type=number id="sphere-p1-y" step=0.001 value=0.0></td>
+          <td><input type=number id="sphere-p1-z" step=0.001 value=0.0></td>
         </tr>
         <tr>
           <td>p2 (x,y,z) [m]</td>
-          <td><input type=number id="sphere-p2" step=0.001></td>
-          <td><input type=number id="sphere-p2" step=0.001></td>
-          <td><input type=number id="sphere-p2" step=0.001></td>
+          <td><input type=number id="sphere-p2-x" step=0.001 value=1.0></td>
+          <td><input type=number id="sphere-p2-y" step=0.001 value=0.0></td>
+          <td><input type=number id="sphere-p2-z" step=0.001 value=0.0></td>
         </tr>
         <tr>
           <td>p3 (x,y,z) [m]</td>
-          <td><input type=number id="sphere-p3" step=0.001></td>
-          <td><input type=number id="sphere-p3" step=0.001></td>
-          <td><input type=number id="sphere-p3" step=0.001></td>
+          <td><input type=number id="sphere-p3-x" step=0.001 value=0.0></td>
+          <td><input type=number id="sphere-p3-y" step=0.001 value=1.0></td>
+          <td><input type=number id="sphere-p3-z" step=0.001 value=0.0></td>
         </tr>
         <tr>
           <td>Radius [m]</td>
-          <td><input type=number id="sphere-radius" min=0.0 step=0.001></td>
+          <td><input type=number id="sphere-radius" min=0.0 step=0.001 value=1.0></td>
         </tr>
         <tr>
           <td>Start Angle [&deg]</td>
-          <td><input type=number id="sphere-start_angle" max=360.0 min=0.0 step=0.1></td>
+          <td><input type=number id="sphere-start_angle" max=360.0 min=0.0 step=0.1 value=0.0></td>
         </tr>
         <tr>
           <td>End Angle [&deg]</td>
-          <td><input type=number id="sphere-end_angle" max=360.0 min=0.0 step=0.1></td>
+          <td><input type=number id="sphere-end_angle" max=360.0 min=0.0 step=0.1 value=360.0></td>
         </tr>
         <tr>
           <td>Apex Truncation [m]</td>
-          <td><input type=number id="sphere-apex_truncation" min=0.0 step=0.001></td>
+          <td><input type=number id="sphere-apex_truncation" step=0.001 value=1.0></td>
         </tr>
         <tr>
           <td>Base Truncation [m]</td>
-          <td><input type=number id="sphere-base_truncation" min=0.0 step=0.001></td>
+          <td><input type=number id="sphere-base_truncation" step=0.001 value=-1.0></td>
         </tr>
         <tr>
           <td>Color</td>
-          <td><input type=color id="sphere-color"></td>
+          <td><input type=color id="sphere-color" value=#ffff00></td>
         </tr>
       </table>
       <button type="button" id="sphere-dialog-ok">OK</button>
@@ -120,25 +120,25 @@
       <table>
         <tr>
           <td>p1 (x,y,z) [m]</td>
-          <td><input type=number id="rectangle-p1" step=0.001></td>
-          <td><input type=number id="rectangle-p1" step=0.001></td>
-          <td><input type=number id="rectangle-p1" step=0.001></td>
+          <td><input type=number id="rectangle-p1-x" step=0.001 value=0.0></td>
+          <td><input type=number id="rectangle-p1-y" step=0.001 value=0.0></td>
+          <td><input type=number id="rectangle-p1-z" step=0.001 value=0.0></td>
         </tr>
         <tr>
           <td>p2 (x,y,z) [m]</td>
-          <td><input type=number id="rectangle-p2" step=0.001></td>
-          <td><input type=number id="rectangle-p2" step=0.001></td>
-          <td><input type=number id="rectangle-p2" step=0.001></td>
+          <td><input type=number id="rectangle-p2-x" step=0.001 value=1.0></td>
+          <td><input type=number id="rectangle-p2-y" step=0.001 value=0.0></td>
+          <td><input type=number id="rectangle-p2-z" step=0.001 value=0.0></td>
         </tr>
         <tr>
           <td>p3 (x,y,z) [m]</td>
-          <td><input type=number id="rectangle-p3" step=0.001></td>
-          <td><input type=number id="rectangle-p3" step=0.001></td>
-          <td><input type=number id="rectangle-p3" step=0.001></td>
+          <td><input type=number id="rectangle-p3-x" step=0.001 value=0.0></td>
+          <td><input type=number id="rectangle-p3-y" step=0.001 value=1.0></td>
+          <td><input type=number id="rectangle-p3-z" step=0.001 value=0.0></td>
         </tr>
         <tr>
           <td>Color</td>
-          <td><input type=color id="rectangle-color"></td>
+          <td><input type=color id="rectangle-color" value=#00cccc></td>
         </tr>
       </table>
       <button type="button" id="rectangle-dialog-ok">OK</button>
@@ -151,25 +151,25 @@
       <table>
         <tr>
           <td>p1 (x,y,z) [m]</td>
-          <td><input type=number id="triangle-p1" step=0.001></td>
-          <td><input type=number id="triangle-p1" step=0.001></td>
-          <td><input type=number id="triangle-p1" step=0.001></td>
+          <td><input type=number id="triangle-p1-x" step=0.001 value=0.0></td>
+          <td><input type=number id="triangle-p1-y" step=0.001 value=0.0></td>
+          <td><input type=number id="triangle-p1-z" step=0.001 value=0.0></td>
         </tr>
         <tr>
           <td>p2 (x,y,z) [m]</td>
-          <td><input type=number id="triangle-p2" step=0.001></td>
-          <td><input type=number id="triangle-p2" step=0.001></td>
-          <td><input type=number id="triangle-p2" step=0.001></td>
+          <td><input type=number id="triangle-p2-x" step=0.001 value=1.0></td>
+          <td><input type=number id="triangle-p2-y" step=0.001 value=0.0></td>
+          <td><input type=number id="triangle-p2-z" step=0.001 value=0.0></td>
         </tr>
         <tr>
           <td>p3 (x,y,z) [m]</td>
-          <td><input type=number id="triangle-p3" step=0.001></td>
-          <td><input type=number id="triangle-p3" step=0.001></td>
-          <td><input type=number id="triangle-p3" step=0.001></td>
+          <td><input type=number id="triangle-p3-x" step=0.001 value=0.0></td>
+          <td><input type=number id="triangle-p3-y" step=0.001 value=1.0></td>
+          <td><input type=number id="triangle-p3-z" step=0.001 value=0.0></td>
         </tr>
         <tr>
           <td>Color</td>
-          <td><input type=color id="triangle-color"></td>
+          <td><input type=color id="triangle-color" value=#cc00cc></td>
         </tr>
       </table>
       <button type="button" id="triangle-dialog-ok">OK</button>
@@ -182,41 +182,41 @@
       <table>
         <tr>
           <td>p1 (x,y,z) [m]</td>
-          <td><input type=number id="disk-p1" step=0.001></td>
-          <td><input type=number id="disk-p1" step=0.001></td>
-          <td><input type=number id="disk-p1" step=0.001></td>
+          <td><input type=number id="disk-p1-x" step=0.001 value=0.0></td>
+          <td><input type=number id="disk-p1-y" step=0.001 value=0.0></td>
+          <td><input type=number id="disk-p1-z" step=0.001 value=0.0></td>
         </tr>
         <tr>
           <td>p2 (x,y,z) [m]</td>
-          <td><input type=number id="disk-p2" step=0.001></td>
-          <td><input type=number id="disk-p2" step=0.001></td>
-          <td><input type=number id="disk-p2" step=0.001></td>
+          <td><input type=number id="disk-p2-x" step=0.001 value=1.0></td>
+          <td><input type=number id="disk-p2-y" step=0.001 value=0.0></td>
+          <td><input type=number id="disk-p2-z" step=0.001 value=0.0></td>
         </tr>
         <tr>
           <td>p3 (x,y,z) [m]</td>
-          <td><input type=number id="disk-p3" step=0.001></td>
-          <td><input type=number id="disk-p3" step=0.001></td>
-          <td><input type=number id="disk-p3" step=0.001></td>
+          <td><input type=number id="disk-p3-x" step=0.001 value=0.0></td>
+          <td><input type=number id="disk-p3-y" step=0.001 value=1.0></td>
+          <td><input type=number id="disk-p3-z" step=0.001 value=0.0></td>
         </tr>
         <tr>
           <td>Outer Radius [m]</td>
-          <td><input type=number id="disk-outer_radius" min=0.0 step=0.001></td>
+          <td><input type=number id="disk-outer_radius" min=0.0 step=0.001 value=1.0></td>
         </tr>
         <tr>
           <td>Inner Radius [m]</td>
-          <td><input type=number id="disk-inner_radius" min=0.0 step=0.001></td>
+          <td><input type=number id="disk-inner_radius" min=0.0 step=0.001 value=0.0></td>
         </tr>
         <tr>
           <td>Start Angle [&deg]</td>
-          <td><input type=number id="disk-start_angle" max=360.0 min=0.0 step=0.1></td>
+          <td><input type=number id="disk-start_angle" max=360.0 min=0.0 step=0.1 value=0.0></td>
         </tr>
         <tr>
           <td>End Angle [&deg]</td>
-          <td><input type=number id="disk-end_angle" max=360.0 min=0.0 step=0.1></td>
+          <td><input type=number id="disk-end_angle" max=360.0 min=0.0 step=0.1 value=360.0></td>
         </tr>
         <tr>
           <td>Color</td>
-          <td><input type=color id="disk-color"></td>
+          <td><input type=color id="disk-color" value=#cc0000></td>
         </tr>
       </table>
       <button type="button" id="disk-dialog-ok">OK</button>
@@ -229,41 +229,37 @@
       <table>
         <tr>
           <td>p1 (x,y,z) [m]</td>
-          <td><input type=number id="cylinder-p1" step=0.001></td>
-          <td><input type=number id="cylinder-p1" step=0.001></td>
-          <td><input type=number id="cylinder-p1" step=0.001></td>
+          <td><input type=number id="cylinder-p1-x" step=0.001 value=0.0></td>
+          <td><input type=number id="cylinder-p1-y" step=0.001 value=0.0></td>
+          <td><input type=number id="cylinder-p1-z" step=0.001 value=0.0></td>
         </tr>
         <tr>
           <td>p2 (x,y,z) [m]</td>
-          <td><input type=number id="cylinder-p2" step=0.001></td>
-          <td><input type=number id="cylinder-p2" step=0.001></td>
-          <td><input type=number id="cylinder-p2" step=0.001></td>
+          <td><input type=number id="cylinder-p2-x" step=0.001 value=1.0></td>
+          <td><input type=number id="cylinder-p2-y" step=0.001 value=0.0></td>
+          <td><input type=number id="cylinder-p2-z" step=0.001 value=0.0></td>
         </tr>
         <tr>
           <td>p3 (x,y,z) [m]</td>
-          <td><input type=number id="cylinder-p3" step=0.001></td>
-          <td><input type=number id="cylinder-p3" step=0.001></td>
-          <td><input type=number id="cylinder-p3" step=0.001></td>
+          <td><input type=number id="cylinder-p3-x" step=0.001 value=0.0></td>
+          <td><input type=number id="cylinder-p3-y" step=0.001 value=1.0></td>
+          <td><input type=number id="cylinder-p3-z" step=0.001 value=0.0></td>
         </tr>
         <tr>
           <td>Radius [m]</td>
-          <td><input type=number id="cylinder-radius" min=0.0 step=0.001></td>
-        </tr>
-        <tr>
-          <td>Height [m]</td>
-          <td><input type=number id="cylinder-height" min=0.0 step=0.001></td>
+          <td><input type=number id="cylinder-radius" min=0.0 step=0.001 value=1.0></td>
         </tr>
         <tr>
           <td>Start Angle [&deg]</td>
-          <td><input type=number id="cylinder-start_angle" max=360.0 min=0.0 step=0.1></td>
+          <td><input type=number id="cylinder-start_angle" max=360.0 min=0.0 step=0.1 value=0.0></td>
         </tr>
         <tr>
           <td>End Angle [&deg]</td>
-          <td><input type=number id="cylinder-end_angle" max=360.0 min=0.0 step=0.1></td>
+          <td><input type=number id="cylinder-end_angle" max=360.0 min=0.0 step=0.1 value=360.0></td>
         </tr>
         <tr>
           <td>Color</td>
-          <td><input type=color id="cylinder-color"></td>
+          <td><input type=color id="cylinder-color" value=#00cc00></td>
         </tr>
       </table>
       <button type="button" id="cylinder-dialog-ok">OK</button>
@@ -276,45 +272,41 @@
       <table>
         <tr>
           <td>p1 (x,y,z) [m]</td>
-          <td><input type=number id="cone-p1" step=0.001></td>
-          <td><input type=number id="cone-p1" step=0.001></td>
-          <td><input type=number id="cone-p1" step=0.001></td>
+          <td><input type=number id="cone-p1-x" step=0.001 value=0.0></td>
+          <td><input type=number id="cone-p1-y" step=0.001 value=0.0></td>
+          <td><input type=number id="cone-p1-z" step=0.001 value=0.0></td>
         </tr>
         <tr>
           <td>p2 (x,y,z) [m]</td>
-          <td><input type=number id="cone-p2" step=0.001></td>
-          <td><input type=number id="cone-p2" step=0.001></td>
-          <td><input type=number id="cone-p2" step=0.001></td>
+          <td><input type=number id="cone-p2-x" step=0.001 value=1.0></td>
+          <td><input type=number id="cone-p2-y" step=0.001 value=0.0></td>
+          <td><input type=number id="cone-p2-z" step=0.001 value=0.0></td>
         </tr>
         <tr>
           <td>p3 (x,y,z) [m]</td>
-          <td><input type=number id="cone-p3" step=0.001></td>
-          <td><input type=number id="cone-p3" step=0.001></td>
-          <td><input type=number id="cone-p3" step=0.001></td>
+          <td><input type=number id="cone-p3-x" step=0.001 value=0.0></td>
+          <td><input type=number id="cone-p3-y" step=0.001 value=1.0></td>
+          <td><input type=number id="cone-p3-z" step=0.001 value=0.0></td>
         </tr>
         <tr>
           <td>Radius1 [m]</td>
-          <td><input type=number id="cone-radius1" min=0.0 step=0.001></td>
+          <td><input type=number id="cone-radius1" min=0.0 step=0.001 value=1.0></td>
         </tr>
         <tr>
           <td>Radius2 [m]</td>
-          <td><input type=number id="cone-radius2" min=0.0 step=0.001></td>
-        </tr>
-        <tr>
-          <td>Height [m]</td>
-          <td><input type=number id="cone-height" min=0.0 step=0.001></td>
+          <td><input type=number id="cone-radius2" min=0.0 step=0.001 value=0.5></td>
         </tr>
         <tr>
           <td>Start Angle [&deg]</td>
-          <td><input type=number id="cone-start_angle" max=360.0 min=0.0 step=0.1></td>
+          <td><input type=number id="cone-start_angle" max=360.0 min=0.0 step=0.1 value=0.0></td>
         </tr>
         <tr>
           <td>End Angle [&deg]</td>
-          <td><input type=number id="cone-end_angle" max=360.0 min=0.0 step=0.1></td>
+          <td><input type=number id="cone-end_angle" max=360.0 min=0.0 step=0.1 value=360.0></td>
         </tr>
         <tr>
           <td>Color</td>
-          <td><input type=color id="cone-color"></td>
+          <td><input type=color id="cone-color" value=#0000cc></td>
         </tr>
       </table>
       <button type="button" id="cone-dialog-ok">OK</button>
@@ -327,41 +319,41 @@
       <table>
         <tr>
           <td>p1 (x,y,z) [m]</td>
-          <td><input type=number id="paraboloid-p1" step=0.001></td>
-          <td><input type=number id="paraboloid-p1" step=0.001></td>
-          <td><input type=number id="paraboloid-p1" step=0.001></td>
+          <td><input type=number id="paraboloid-p1-x" step=0.001 value=0.0></td>
+          <td><input type=number id="paraboloid-p1-y" step=0.001 value=0.0></td>
+          <td><input type=number id="paraboloid-p1-z" step=0.001 value=0.0></td>
         </tr>
         <tr>
           <td>p2 (x,y,z) [m]</td>
-          <td><input type=number id="paraboloid-p2" step=0.001></td>
-          <td><input type=number id="paraboloid-p2" step=0.001></td>
-          <td><input type=number id="paraboloid-p2" step=0.001></td>
+          <td><input type=number id="paraboloid-p2-x" step=0.001 value=1.0></td>
+          <td><input type=number id="paraboloid-p2-y" step=0.001 value=0.0></td>
+          <td><input type=number id="paraboloid-p2-z" step=0.001 value=0.0></td>
         </tr>
         <tr>
           <td>p3 (x,y,z) [m]</td>
-          <td><input type=number id="paraboloid-p3" step=0.001></td>
-          <td><input type=number id="paraboloid-p3" step=0.001></td>
-          <td><input type=number id="paraboloid-p3" step=0.001></td>
+          <td><input type=number id="paraboloid-p3-x" step=0.001 value=0.0></td>
+          <td><input type=number id="paraboloid-p3-y" step=0.001 value=1.0></td>
+          <td><input type=number id="paraboloid-p3-z" step=0.001 value=0.0></td>
         </tr>
         <tr>
           <td>Radius [m]</td>
-          <td><input type=number id="paraboloid-radius" min=0.0 step=0.001></td>
+          <td><input type=number id="paraboloid-radius" min=0.0 step=0.001 value=1.0></td>
         </tr>
         <tr>
           <td>Apex Truncation [m]</td>
-          <td><input type=number id="paraboloid-apex_truncation" min=0.0 step=0.001></td>
+          <td><input type=number id="paraboloid-apex_truncation" min=0.0 step=0.001 value=0.0></td>
         </tr>
         <tr>
           <td>Start Angle [&deg]</td>
-          <td><input type=number id="paraboloid-start_angle" max=360.0 min=0.0 step=0.1></td>
+          <td><input type=number id="paraboloid-start_angle" max=360.0 min=0.0 step=0.1 value=0.0></td>
         </tr>
         <tr>
           <td>End Angle [&deg]</td>
-          <td><input type=number id="paraboloid-end_angle" max=360.0 min=0.0 step=0.1></td>
+          <td><input type=number id="paraboloid-end_angle" max=360.0 min=0.0 step=0.1 value=360.0></td>
         </tr>
         <tr>
           <td>Color</td>
-          <td><input type=color id="paraboloid-color"></td>
+          <td><input type=color id="paraboloid-color" value=#cccccc></td>
         </tr>
       </table>
       <button type="button" id="paraboloid-dialog-ok">OK</button>
